--- a/MIDN_figures_and_tables.Rmd
+++ b/MIDN_figures_and_tables.Rmd
@@ -112,8 +112,8 @@ tab1 <-
   purrr::reduce((border_cols[2] + 1): border_cols[3], function(x, y){
     colm <- reg_cycle_tab[, y]
     column_spec(x, y, background = ifelse(!is.na(colm) & colm >= 100, reg_pass, "#FFFFFF"))}, .init = .) %>%
-  row_spec(1, extra_css = "border-top: 1px solid #000000;") %>%
-  row_spec(nrow(reg_cycle_tab), extra_css = "border-bottom: 1px solid #000000;") %>%
+  row_spec(0:nrow(reg_cycle_tab), extra_css = "border-top: 1px solid #000000;") %>%
+  row_spec(0:nrow(reg_cycle_tab), extra_css = "border-bottom: 1px solid #000000;") %>%
   #landscape(margin = "1cm") %>% 
   save_kable(file = "table1.html", self_contained = F) # save as html b/c pagedown was having issues
 ```
@@ -125,7 +125,7 @@ tab2_row2 <- gsub("inv_cov_|numspp_", "Cycle ", tab2_cols)
 border2_cols <- c(2 + cycle_latest, 2 + cycle_latest*2, 2 )
 
 tab2 <- 
-  kable(inv_plots_wide, col.names = tab2_row2, digits = 2, align = 'c', format = 'html', 
+  kable(inv_cycle_tab, col.names = tab2_row2, digits = 2, align = 'c', format = 'html', 
         table.attr = "style='width:95%;height:95%;'") %>% #, caption = cap_t2, title = NULL) %>%
   add_header_above(c(" " = 1, " " = 1, "Average % Cover" = cycle_latest, 
                      "Number of Species per Plot" = cycle_latest)) %>%
@@ -133,14 +133,16 @@ tab2 <-
                 full_width = FALSE, position = 'center', font_size = 9) %>%
   column_spec(c(1, 2), border_left = T, border_right = T) %>%
   column_spec(border2_cols, border_right = T) %>%
-  row_spec(1, extra_css = "border-top: 1px solid #000000;") %>%
-  row_spec(nrow(inv_cycle_tab), extra_css = "border-bottom: 1px solid #000000;") %>%
+  row_spec(0:nrow(inv_cycle_tab), extra_css = "border-top: 1px solid #000000;") %>%
+  row_spec(0:nrow(inv_cycle_tab), extra_css = "border-bottom: 1px solid #000000;") %>%
   #landscape(margin = "1cm") %>%
   save_kable(file = "table2.html", self_contained = F)
 ```
 ```{r include = F, eval = T, results = 'hide'}
 # Table 3 setup
 tab3_cols <- c("Latin Name", "Common Name", gsub("cycle_", "Cycle ", names(inv_spp[,3:ncol(inv_spp)])))
+
+inv_spp <- inv_spp |> filter(!ScientificName %in% "None present")
 
 tab3 <- 
   kable(inv_spp, col.names = tab3_cols, digits = 0, align = 'c', format = 'html',
@@ -150,8 +152,8 @@ tab3 <-
   column_spec(1, italic = TRUE) %>%
   column_spec(c(1, 2), border_left = T, border_right = T) %>%
   column_spec(ncol(inv_spp), border_right = T) %>%
-  row_spec(1, extra_css = "border-top: 1px solid #000000;") %>%
-  row_spec(nrow(inv_spp), extra_css = "border-bottom: 1px solid #000000;") %>%
+  row_spec(0:nrow(inv_spp), extra_css = "border-top: 1px solid #000000;") %>%
+  row_spec(0:nrow(inv_spp), extra_css = "border-bottom: 1px solid #000000;") %>%
   #landscape(margin = "1cm") %>%
   save_kable(file = "table3.html", self_contained = F)
 
